--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
   <body>
     <div id="app">
       <div class="nav-bar"></div>
-      
+
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <!-- image goes here -->
+            <img :src="image">
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <a :href="url">Learn more about Vue.js here</a>
           </div>
         </div>
       </div>
