--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <div class="nav-bar"></div>
 
       <div class="cart">Cart({{ cart }})</div>
-      
+
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <img v-bind:src="image">
+            <img :src="image" :class="{ 'out-of-stock-img': !inStock }">
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
@@ -27,12 +27,18 @@
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
 
-            <div 
-              v-for="variant in variants" 
-              :key="variant.id" 
-              @mouseover="updateImage(variant.image)" 
+            <div
+              v-for="variant in variants"
+              :key="variant.id"
+              @mouseover="updateImage(variant.image)"
+              class="color-circle"
+              :style="{ backgroundColor: variant.color }"
             >{{ variant.color }}</div>
-            <button class="button" @click="addToCart">Add to Cart</button>
+            <button
+              class="button"
+              :class="{ disabledButton: !inStock }"
+              @click="addToCart"
+              :disabled="!inStock">Add to Cart</button>
           </div>
         </div>
       </div>
