--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           </div>
           <div class="product-info">
             <h1>{{ title }}</h1>
+            <p>{{ sale }}</p>
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
-            <p v-if="onSale">{{ sale }}</p>
             <ul>
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
