--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       <div class="nav-bar"></div>
 
       <div class="cart">Cart({{ cart.length }})</div>
-      <product-display :premium="premium" @add-to-cart="updateCart" @remove-item="removeItem"></product-display>
+      <product-display
+        :premium="premium"
+        @add-to-cart="updateCart"
+        @remove-item="removeItem"
+      ></product-display>
     </div>
 
     <!-- Import App -->
